--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Build and publish
       env:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
       run: |
         python setup.py sdist bdist_wheel
         twine upload dist/*
