--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -2,8 +2,7 @@ black
 coverage>=6.4.4,<7
 flake8>=5.0.4,<6
 pytest>=7.1.3,<8
-wheel
 lxml
-acdh_tei_pyutils=0.31
+acdh_tei_pyutils
 python-slugify>=8.0.1
 rdflib
