--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,18 +7,21 @@ jobs:
   test:
     name: Test Application
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.11", "3.12"]
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v4
+    - name: Set up Python Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.10'
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         pip install --upgrade --upgrade-strategy eager -r requirements_dev.txt
     - name: Install actual package
       run: |
-        pip install -e .
+        pip install .
     - name: Run tests
       run: coverage run -m pytest -v
     - name: Create Coverage Report
@@ -27,5 +30,6 @@ jobs:
       uses: codecov/codecov-action@v4
       with:
         file: ./coverage.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
         fail_ci_if_error: false
         verbose: true
